# symbiotic-analysis-environment

./: .gitignore  INSTALLER_SETUP.md  README.md  build-installers.js  eslint.config.js  index.html  main.js  package-lock.json  package.json  test-installer-config.js  tsconfig.json  vite.config.js  vitest.config.accessibility.ts
.bmad-2d-phaser-game-dev/: install-manifest.yaml
.bmad-2d-phaser-game-dev/data/: development-guidelines.md
.bmad-2d-unity-game-dev/: install-manifest.yaml
.bmad-2d-unity-game-dev/tasks/: correct-course-game.md  execute-checklist.md  shard-doc.md
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
ai_core/: main.py  requirements.txt  requirements_local_llm.txt  simple_test.py  test_consensus.py  test_corrections.py  test_local_llm.py  test_memory.py  test_system_validation.py
ai_core/consensus/: __init__.py  config.py  correction_aware_engine.py  engine.py  local_aware_engine.py  models.py  resolver.py  scorer.py  streamer.py  types.py  validator.py
ai_core/corrections/: __init__.py  analyzer.py  learner.py  manager.py  sanitizer.py  types.py
ai_core/local_llm/: __init__.py  downloader.py  hardware.py  inference.py  manager.py  models.py  security.py
ai_core/memory/: __init__.py  cache.py  config.py  database.py  learning.py  manager.py  types.py
docs/: LOCAL_LLM_GUIDE.md  WINDOWS_BUILD_SETUP.md  accessibility-guide.md  audit-report-2025-07-31.md  fullstack-architecture.md  implementation-summary-3.1.md  implementation-summary-3.2.md  implementation-summary-3.3.md  prd.md.txt  project-blueprint.md.md  project-brief.md.txt  qa-review-3.1.md  qa-review-3.3.md  rontend-architecture.md.txt
docs/components/: ui-component-guide.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  1.6.story.md  2.1.story.md  2.2.story.md  2.3.story.md  (+10 more)
scripts/: run-accessibility-tests.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai_engine/: communication.rs  config.rs  health.rs  manager.rs  mod.rs  task_manager.rs  tests.rs  types.rs
src-tauri/src/database/: connection.rs  credentials.rs  drivers.rs  manager.rs  mod.rs  security.rs  tests.rs  types.rs
src-tauri/src/template_engine/: mod.rs  template_manager.rs  types.rs
test-results/: accessibility-report.html  accessibility-results.json
(+197 files in other folders)
