[package]
name = "symbiotic-analysis-environment"
version = "0.1.0"
description = "Local-first AI-powered data analysis environment"
authors = ["Symbiotic Analysis Team"]
license = "MIT"
repository = "https://github.com/symbiotic-analysis/environment"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "symbiotic_analysis_environment_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Database drivers and connection management
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "chrono", "uuid"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# OS Keychain integration
keyring = "2.3"

# Security and encryption
ring = "0.17"
base64 = "0.22"

# Connection pooling
deadpool = "0.10"
deadpool-postgres = "0.12"

# System directories
dirs = "5.0"

# Async trait support
async-trait = "0.1"

# URL encoding
urlencoding = "2.1"
